--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
-use_frameworks!
+platform :ios, '11'
+use_modular_headers!
+
 target 'X11Kit_Tests' do
-  pod 'X11Kit', :path => '../'
-  
-  
+  pod 'X11Kit.swift', :path => '../'
 end
